# twingate-connector-log-shipper

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.host.yml  docker-compose.sidecar.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
docs/: architecture.md
sample-data/: generate.py
sample-data/fixtures/: audit_log.ndjson  dns_filtering.ndjson  network_access.ndjson
schemas/: audit_log.json  connector_analytics.json  dns_filtering.json  network_access.json
src/twingate_log_shipper/: batcher.py  config.py  main.py  shipper.py
src/twingate_log_shipper/collectors/: base.py  docker.py  journald.py
systemd/: twingate-log-shipper.service
tests/: conftest.py  test_batcher.py  test_collectors.py  test_integration.py  test_shipper.py
